--- a/com.pingPong.dannielf/view/index.html
+++ b/com.pingPong.dannielf/view/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="module" src="../controller/main.mjs"></script>
   <title>Ping-pong</title>
 </head>
+<style>
+  canvas {
+    border: 1px solid black;
+  }
+</style>
+
 <body>
-  
+  <h1>Ping-pong game</h1>
+  <canvas id="canvas"></canvas>
 </body>
+
 </html>
